# HMT26_STM32-Template

./: .clang-tidy  .cproject  .gitattributes  .gitignore  .mxproject  .project  .templatesyncignore  CMakeLists.txt  CMakeLists_template.txt  HMT26_template.ioc  README.md  modules.txt  openocd.cfg  precommit-config.yaml.wip
.devcontainer/: Dockerfile  arm-none-eabi-toolchain.cmake  devcontainer.json
.github/workflows/: ci.yml  sync-from-template.yml  testing-and-static-analysis.yml
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  version.h
Core/Src/: can.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c  version.c.in
Libs/: README
Libs/trice/: CMakeLists.txt
Libs/trice/trice-config/Inc/: SEGGER_RTT_Conf.h  triceConfig.h  triceUart.h  trice_interrupts.h
Libs/trice/trice-config/Src/: triceUart.c  usartInterrupts.c
Project/: CMakeLists.txt  hmt-compile-project-lib.cmake
Project/Inc/: app.h  check_build_config.h  static.h  triceConfig.h  triceUart.h
Project/Src/: app.cpp  check_build_config.cpp
cmake/: hmt-compile-project-lib.cmake  hmt-project-compile-flags.cmake  stm32-core.cmake
cmake-configuration/: CMake_check_git.cmake  CMake_download_git_repo.cmake  CMake_generate_sizes_report.cmake
cmake/openstmodules/: CMake_check_git.cmake  CMake_download_git_repo.cmake
cmake/stm32cubemx/: CMakeLists.txt
scripts/: flash.sh  image.ps1  test.ps1
scripts/build-scripts/: post-build.sh  pre-build.sh
scripts/dev-container/tests/: run-tests.sh
scripts/host-windows/code/: analysis.ps1  build.ps1
scripts/host-windows/ssh/: enable-ssh-passthrough.ps1
scripts/host-windows/usb/: load-usb-port.bat  usb-passthrough-attach.bat  usb-passthrough-install.bat  usb-passthrough-list.bat
scripts/tests/: run-tests.sh
scripts/trice/: copy-trice-source.sh  create-trice-db.sh  trice-log.sh  trice-post-compile.sh  trice-pre-compile.sh
scripts/windows/: usb-passthrough-bind.bat  usb-port.cfg.template
tests/: CMakeLists.txt  demo_test.cpp
tests/on-host/: CMakeLists.txt  demo_test.cpp  fff_test.cpp  include_stm32_test.cpp  testing.hpp
tests/on-host/examples/: demo_test.cpp
tests/on-host/fakes/stm32-core-override/: CMakeLists.txt  main.h  stm32f446xx_override.h
tests/on-host/fakes/trice/: CMakeLists.txt  trice.h
tests/on-host/header-overrides/: stm32f4xx_hal_gpio_override.h
